-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5, 6.6, 6.7
-
-
05f5c32cb (dev), 6e394cf11 (6.7), aad9a9ea1 (6.6), 0260eb09d (tqtc/lts-6.5)
After Implement audio resampling in QSoundEffect (I24d0ca39) · Gerrit Code Review (qt-project.org), QSoundEffect only plays the first half of the sound in some cases.
The issue does not occur when using the Windows backend (or no backend at all).
The issue is reproducible with attached sound, although not very obvious. In the example attached to QTBUG-112512, the cut off is very obvious because it cuts half-sentence.
- relates to
-
QTBUG-122193 QSoundEffect hangs on Loading
-
- Closed
-
-
QTBUG-112512 QSoundEffect cuts out on very short sounds ( ~ 0.2 - 0.3 seconds )
-
- Closed
-